# beatconnect_plugin_sdk

./: .gitignore  Becca x Beatconnect.txt  CLAUDE.md  CMakeLists.txt  README.md
Resources/WebUI/assets/: index.css  index.js
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
beatconnect-sdk/: CLAUDE.md  README.md
beatconnect-sdk/sdk/activation/include/beatconnect/: Activation.h  AssetDownloader.h
beatconnect-sdk/sdk/activation/src/: Activation.cpp  AssetDownloader.cpp
beatconnect-sdk/templates/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
beatconnect-sdk/templates/web-ui-svelte/: ACTIVATION.md
beatconnect-sdk/templates/web-ui-svelte/src/lib/: bridge.ts
beatconnect-sdk/templates/web-ui-svelte/src/lib/components/: ActivationDialog.svelte
beatconnect-sdk/templates/web-ui-svelte/src/lib/stores/: activation.ts
beatconnect-sdk/templates/web-ui/src/: activation.css
beatconnect-sdk/templates/web-ui/src/components/: ActivationDialog.tsx
beatconnect-sdk/templates/web-ui/src/hooks/: useActivation.ts
sdk/activation/include/beatconnect/: Activation.h
sdk/activation/src/: Activation.cpp  AssetDownloader.cpp  MachineId.cpp
templates/: CMakeLists.txt
templates/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css
web-ui/src/components/: ActivationDialog.tsx  Knob.tsx  LevelMeter.tsx  LogoText.tsx  Pedal.tsx  PresetSelector.tsx  Sparks.tsx  Tooltip.tsx  TubeGlow.tsx  VUMeter.tsx  Visualizer.tsx
web-ui/src/contexts/: DragContext.tsx
web-ui/src/hooks/: useActivation.ts  usePedalOrder.ts
web-ui/src/lib/: juce-bridge.ts
